fixed dark mode layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -73,15 +73,6 @@
     background-color: black;
 }
 
-@media only screen and (min-width: 700px) {
-    #photo-grid-dark-mode {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        margin-bottom: 0;
-    }
-    }
-
-
 
 
 .photo-wrapper {
@@ -101,6 +92,12 @@
         grid-template-columns: 1fr 1fr 1fr;
         margin-bottom: 0;
         
+    }
+
+    #photo-grid-dark-mode {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-bottom: 0;
     }
 
     .photos {
